DT-1542: Refactor email sending service code (#2499)