@@ -162,13 +162,13 @@ public class DaaService implements ConsentLogger {
       if (signingOfficials.isEmpty()) {
         throw new NotFoundException("No signing officials found for user: " + user.getDisplayName());
       }
-      int userId = user.getUserId();
-      String userName = user.getDisplayName();
       for (SimplifiedUser signingOfficial : signingOfficials) {
         DataAccessAgreement daa = findById(daaId);
         String daaName = daa.getFile().getFileName();
-        emailService.sendDaaRequestMessage( signingOfficial.displayName, signingOfficial.email,
-            userName, daaName, daaId, userId);
+        User toUser = new User();
+        toUser.setEmail(signingOfficial.email);
+        toUser.setDisplayName(signingOfficial.displayName);
+        emailService.sendDaaRequestMessage(toUser, user, daaName, daaId);
       }
     } catch (Exception e) {
       logException(e);
@@ -185,15 +185,18 @@ public class DaaService implements ConsentLogger {
         List<SimplifiedUser> signingOfficials = researchers.stream()
             .flatMap(researcher -> userService.findSOsByInstitutionId(researcher.institutionId).stream())
             .distinct()
-            .collect(Collectors.toList());
+            .toList();
+        User toUser = new User();
 
         for (SimplifiedUser researcher : researchers) {
-          emailService.sendNewDAAUploadResearcherMessage(researcher.displayName, researcher.email,
-              dacName, previousDaaName, newDaaName, user.getUserId());
+          toUser.setEmail(researcher.email);
+          toUser.setDisplayName(researcher.displayName);
+          emailService.sendNewDAAUploadResearcherMessage(toUser, dacName, previousDaaName, newDaaName, user.getUserId());
         }
         for (SimplifiedUser signingOfficial : signingOfficials) {
-          emailService.sendNewDAAUploadSOMessage(signingOfficial.displayName, signingOfficial.email,
-              dacName, previousDaaName, newDaaName, user.getUserId());
+          toUser.setEmail(signingOfficial.email);
+          toUser.setDisplayName(signingOfficial.displayName);
+          emailService.sendNewDAAUploadSOMessage(toUser, dacName, previousDaaName, newDaaName, user.getUserId());
         }
       }
     } catch (Exception e) {
